deployment.yml
apiVersion: apps/v1
kind: Deployment
namespace: nodeapp
metadata:
  name: nodeapp-development
  labels:
    app: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp 
    spec:
      containers:
      - name: nodeserver
        image: registry.tukanginfra.my.id/development/nodeapp:latest
        ports:
        - containerPort: 80
