service.yml
apiVersion: v1
kind: Service
metadata:
  name: nodeapp-development-service
  namespace: nodeapp
spec:
  selector:
    app: nodeapp
  type: NodePort
  ports:
  - name: http
    nodePort: 31110
    port: 80
    targetPort: 3000
    protocol: TCP
