deploymentservice.yml
apiVersion: apps/v1
kind: Deployment
namespace: nodeapp
metadata:
  name: nodeapp-development2
  labels:
    app: nodeapp
spec:
  replicas: 1
  selector:
    matchLabels:
      app: nodeapp
  template:
    metadata:
      labels:
        app: nodeapp
    spec:
      containers:
      - name: nodeserver
        image: registry.tukanginfra.my.id/development/nodeapp:latest
        ports:
        - containerPort: 3000

---

apiVersion: v1
kind: Service
namespace: nodeapp
metadata:
  name: nodeapp-development-service
spec:
  selector:
    app: nodeapp
  type: NodePort
  ports:
  - name: http
    nodePort: 31110
    port: 80
    targetPort: 3000
    protocol: TCP

---

apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: nodeapp
spec:
  tls:
  - hosts:
    - nodeapp.tukanginfra.my.id
    secretName: ssl-nodeapp
  rules:
  - host: nodeapp.tukanginfra.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeapp-development-service
            port:
              number: 80
