ingress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: nginx-ingress
  annotations:
      cert-manager.io/cluster-issuer: letsencrypt-prod
      kubernetes.io/ingress.class: nginx
      nginx.ingress.kubernetes.io/rewrite-target: /
  namespace: nodeapp

spec:
  tls:
  - hosts:
    - nodeapp.tukanginfra.my.id
    secretName: ssl-nodeapp

  rules:
  - host: nodeapp.tukanginfra.my.id
    http:
      paths:
      - pathType: Prefix
        path: "/"
        backend:
          service:
            name: nodeapp-development-service
            port:
              number: 80
